--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Django==4.2.8
+Django==4.2.9
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 django-filter==23.5
-mysqlclient==2.2.0
+mysqlclient==2.2.1
 django-redis==5.4.0
-pycryptodomex==3.19.0
+pycryptodomex==3.19.1
 djangorestframework-simplejwt==5.3.1
 celery==5.3.6
 django-celery-results==2.5.1
@@ -13,8 +13,8 @@ flower==2.0.1
 python-daemon==3.0.1
 gunicorn==21.2.0
 django-proxy==1.2.2
-psutil==5.9.6
-uvicorn==0.24.0.post1
+psutil==5.9.7
+uvicorn==0.25.0
 daphne==4.0.0
 channels==4.0.0
 channels-redis==4.1.0
