--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==4.2.9
+Django==5.0.1
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 django-filter==23.5
@@ -6,15 +6,15 @@ mysqlclient==2.2.1
 django-redis==5.4.0
 pycryptodomex==3.20.0
 djangorestframework-simplejwt==5.3.1
-celery==5.3.6
+celery==5.4.0rc1
 django-celery-results==2.5.1
 django-celery-beat==2.5.0
 flower==2.0.1
 python-daemon==3.0.1
 gunicorn==21.2.0
 django-proxy==1.2.2
-psutil==5.9.7
-uvicorn==0.25.0
+psutil==5.9.8
+uvicorn==0.27.0
 daphne==4.0.0
 channels==4.0.0
 channels-redis==4.2.0
