--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django==5.0.3
-djangorestframework==3.14.0
+django==5.0.3
+djangorestframework==3.15.0
 django-cors-headers==4.3.1
 django-filter==23.5
 mysqlclient==2.2.4
@@ -7,15 +7,14 @@ django-redis==5.4.0
 pycryptodomex==3.20.0
 djangorestframework-simplejwt==5.3.1
 celery==5.4.0rc1
+django-celery-beat==2.6.0
 django-celery-results==2.5.1
-#django-celery-beat==2.5.0
-django-celery-beat @ git+https://github.com/celery/django-celery-beat@f66796b9c5c9e47d118cb5b41d970f07cce72bbe
 flower==2.0.1
 python-daemon==3.0.1
 gunicorn==21.2.0
 django-proxy==1.3.0
 psutil==5.9.8
-uvicorn==0.27.1
+uvicorn==0.28.0
 daphne==4.1.0
 channels==4.0.0
 channels-redis==4.2.0
