--- a/loadjson/systemconfig.json
+++ b/loadjson/systemconfig.json
@@ -100,5 +100,22 @@
       "key": "PERMISSION_FIELD",
       "inherit": false
     }
+  },
+  {
+    "model": "system.systemconfig",
+    "pk": "a42a78fd-8087-4499-ab06-f3d6dbeee262",
+    "fields": {
+      "created_time": "2024-04-19T07:43:23.923Z",
+      "updated_time": "2024-04-19T11:43:32.501Z",
+      "description": null,
+      "creator": 1,
+      "modifier": 1,
+      "dept_belong": null,
+      "value": "{\n  \"Version\": \"2.0.0\",\n  \"Title\": \"xAdmin\",\n  \"FixedHeader\": true,\n  \"HiddenSideBar\": false,\n  \"MultiTagsCache\": false,\n  \"KeepAlive\": true,\n  \"Locale\": \"zh\",\n  \"Layout\": \"vertical\",\n  \"Theme\": \"light\",\n  \"DarkMode\": false,\n  \"OverallStyle\": \"light\",\n  \"Grey\": false,\n  \"Weak\": false,\n  \"HideTabs\": false,\n  \"HideFooter\": false,\n  \"Stretch\": false,\n  \"SidebarStatus\": true,\n  \"EpThemeColor\": \"#409EFF\",\n  \"ShowLogo\": true,\n  \"ShowModel\": \"smart\",\n  \"MenuArrowIconNoTransition\": false,\n  \"CachingAsyncRoutes\": false,\n  \"TooltipEffect\": \"light\",\n  \"ResponsiveStorageNameSpace\": \"responsive-\",\n  \"MenuSearchHistory\": 6\n}",
+      "is_active": true,
+      "access": true,
+      "key": "WEB_SITE_CONFIG",
+      "inherit": true
+    }
   }
 ]
