chore(deps): update

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,16 @@ mysqlclient==2.2.4
 django-redis==5.4.0
 pycryptodomex==3.20.0
 djangorestframework-simplejwt==5.3.1
-celery==5.4.0rc2
+celery==5.4.0
 django-celery-beat==2.6.0
 django-celery-results==2.5.1
 flower==2.0.1
 python-daemon==3.0.1
-gunicorn==21.2.0
+gunicorn==22.0.0
 django-proxy==1.3.0
 psutil==5.9.8
 uvicorn==0.29.0
-daphne==4.1.0
+daphne==4.1.2
 channels==4.1.0
 channels-redis==4.2.0
 django-simple-captcha==0.6.0
