--- a/loadjson/systemconfig.json
+++ b/loadjson/systemconfig.json
@@ -35,6 +35,23 @@
   },
   {
     "model": "system.systemconfig",
+    "pk": "3bd7a92c-5d3c-4671-9843-15784577a27d",
+    "fields": {
+      "created_time": "2024-06-09T06:58:20.035Z",
+      "updated_time": "2024-06-09T06:58:47.861Z",
+      "description": "用户消息公告通知推送",
+      "creator": 1,
+      "modifier": 1,
+      "dept_belong": null,
+      "value": "true",
+      "is_active": true,
+      "access": true,
+      "key": "PUSH_MESSAGE_NOTICE",
+      "inherit": true
+    }
+  },
+  {
+    "model": "system.systemconfig",
     "pk": "6a53d866-da52-4f5c-a754-b757784e4e87",
     "fields": {
       "created_time": "2024-01-08T09:44:28.864Z",
@@ -69,6 +86,23 @@
   },
   {
     "model": "system.systemconfig",
+    "pk": "83e04cef-dae4-460a-ae3d-2af17ff80c82",
+    "fields": {
+      "created_time": "2024-06-09T06:59:09.233Z",
+      "updated_time": "2024-06-09T06:59:09.233Z",
+      "description": "用户聊天@消息推送",
+      "creator": 1,
+      "modifier": null,
+      "dept_belong": null,
+      "value": "true",
+      "is_active": true,
+      "access": true,
+      "key": "PUSH_CHAT_MESSAGE",
+      "inherit": true
+    }
+  },
+  {
+    "model": "system.systemconfig",
     "pk": "932fc8a6-97ee-404c-a77f-f269fba4c951",
     "fields": {
       "created_time": "2024-01-04T05:12:59.068Z",
@@ -89,12 +123,12 @@
     "pk": "a42a78fd-8087-4499-ab06-f3d6dbeee262",
     "fields": {
       "created_time": "2024-04-19T07:43:23.923Z",
-      "updated_time": "2024-04-19T11:43:32.501Z",
+      "updated_time": "2024-06-09T06:47:04.935Z",
       "description": null,
       "creator": 1,
       "modifier": 1,
       "dept_belong": null,
-      "value": "{\n  \"Version\": \"2.2.0\",\n  \"Title\": \"xAdmin\",\n  \"FixedHeader\": true,\n  \"HiddenSideBar\": false,\n  \"MultiTagsCache\": false,\n  \"KeepAlive\": true,\n  \"Locale\": \"zh\",\n  \"Layout\": \"vertical\",\n  \"Theme\": \"light\",\n  \"DarkMode\": false,\n  \"OverallStyle\": \"light\",\n  \"Grey\": false,\n  \"Weak\": false,\n  \"HideTabs\": false,\n  \"HideFooter\": false,\n  \"Stretch\": false,\n  \"SidebarStatus\": true,\n  \"EpThemeColor\": \"#409EFF\",\n  \"ShowLogo\": true,\n  \"ShowModel\": \"smart\",\n  \"MenuArrowIconNoTransition\": false,\n  \"CachingAsyncRoutes\": false,\n  \"TooltipEffect\": \"light\",\n  \"ResponsiveStorageNameSpace\": \"responsive-\",\n  \"MenuSearchHistory\": 6\n}",
+      "value": "{\n  \"Version\": \"2.3.1\",\n  \"Title\": \"xAdmin\",\n  \"FixedHeader\": true,\n  \"HiddenSideBar\": false,\n  \"MultiTagsCache\": false,\n  \"KeepAlive\": true,\n  \"Locale\": \"zh\",\n  \"Layout\": \"vertical\",\n  \"Theme\": \"light\",\n  \"DarkMode\": false,\n  \"OverallStyle\": \"light\",\n  \"Grey\": false,\n  \"Weak\": false,\n  \"HideTabs\": false,\n  \"HideFooter\": false,\n  \"Stretch\": false,\n  \"SidebarStatus\": true,\n  \"EpThemeColor\": \"#409EFF\",\n  \"ShowLogo\": true,\n  \"ShowModel\": \"smart\",\n  \"MenuArrowIconNoTransition\": false,\n  \"CachingAsyncRoutes\": false,\n  \"TooltipEffect\": \"light\",\n  \"ResponsiveStorageNameSpace\": \"responsive-\",\n  \"MenuSearchHistory\": 6\n}",
       "is_active": true,
       "access": true,
       "key": "WEB_SITE_CONFIG",
