feat: 增加登录日志城市字段

--- a/requirements.txt
+++ b/requirements.txt
@@ -35,3 +35,6 @@ pyexcel-xlsx==0.6.0
 alibabacloud-dysmsapi20170525==3.0.0
 phonenumbers==8.13.43
 pycountry==24.6.1
+geoip2==4.8.0
+ipip-ipdb==1.6.1
+requests==2.32.3
