--- a/loadjson/systemconfig.json
+++ b/loadjson/systemconfig.json
@@ -4,12 +4,12 @@
     "pk": "0c2be308-7fce-4bf1-ad72-1d55f3262345",
     "fields": {
       "created_time": "2024-01-08T09:40:40.434Z",
-      "updated_time": "2024-01-08T09:40:40.434Z",
+      "updated_time": "2024-09-05T07:20:58.507Z",
       "description": "图片上传大小，默认为500kb",
       "creator": 1,
-      "modifier": null,
+      "modifier": 1,
       "dept_belong": null,
-      "value": "524288",
+      "value": 524288,
       "is_active": true,
       "access": false,
       "key": "PICTURE_UPLOAD_SIZE",
@@ -21,12 +21,12 @@
     "pk": "3451e8e0-f9f5-4216-ac74-65aa323865f0",
     "fields": {
       "created_time": "2024-01-10T01:37:12.011Z",
-      "updated_time": "2024-01-10T02:16:29.865Z",
+      "updated_time": "2024-09-05T07:20:42.114Z",
       "description": "字段权限控制",
       "creator": 1,
       "modifier": 1,
       "dept_belong": null,
-      "value": "true",
+      "value": true,
       "is_active": true,
       "access": false,
       "key": "PERMISSION_FIELD",
@@ -38,12 +38,12 @@
     "pk": "3bd7a92c-5d3c-4671-9843-15784577a27d",
     "fields": {
       "created_time": "2024-06-09T06:58:20.035Z",
-      "updated_time": "2024-06-09T06:58:47.861Z",
+      "updated_time": "2024-09-05T07:20:25.157Z",
       "description": "用户消息公告通知推送",
       "creator": 1,
       "modifier": 1,
       "dept_belong": null,
-      "value": "true",
+      "value": true,
       "is_active": true,
       "access": true,
       "key": "PUSH_MESSAGE_NOTICE",
@@ -55,12 +55,12 @@
     "pk": "6a53d866-da52-4f5c-a754-b757784e4e87",
     "fields": {
       "created_time": "2024-01-08T09:44:28.864Z",
-      "updated_time": "2024-01-10T01:44:15.800Z",
+      "updated_time": "2024-09-05T07:20:53.605Z",
       "description": "注册",
       "creator": 1,
       "modifier": 1,
       "dept_belong": null,
-      "value": "true",
+      "value": true,
       "is_active": true,
       "access": false,
       "key": "REGISTER",
@@ -72,12 +72,12 @@
     "pk": "79f49339-bd81-42c1-95ca-a7032f540d57",
     "fields": {
       "created_time": "2024-01-08T09:34:10.182Z",
-      "updated_time": "2024-07-25T10:15:42.914Z",
+      "updated_time": "2024-09-05T07:21:04.140Z",
       "description": "文件上传大小限制,默认10兆",
       "creator": 1,
       "modifier": 1,
       "dept_belong": null,
-      "value": "10485760",
+      "value": 10485760,
       "is_active": true,
       "access": false,
       "key": "FILE_UPLOAD_SIZE",
@@ -89,12 +89,12 @@
     "pk": "83e04cef-dae4-460a-ae3d-2af17ff80c82",
     "fields": {
       "created_time": "2024-06-09T06:59:09.233Z",
-      "updated_time": "2024-06-09T06:59:09.233Z",
+      "updated_time": "2024-09-05T07:20:19.185Z",
       "description": "用户聊天@消息推送",
       "creator": 1,
-      "modifier": null,
+      "modifier": 1,
       "dept_belong": null,
-      "value": "true",
+      "value": true,
       "is_active": true,
       "access": true,
       "key": "PUSH_CHAT_MESSAGE",
@@ -103,32 +103,41 @@
   },
   {
     "model": "system.systemconfig",
-    "pk": "932fc8a6-97ee-404c-a77f-f269fba4c951",
-    "fields": {
-      "created_time": "2024-01-04T05:12:59.068Z",
-      "updated_time": "2024-01-10T01:44:11.005Z",
-      "description": "登录",
-      "creator": 1,
-      "modifier": 1,
-      "dept_belong": null,
-      "value": "true",
-      "is_active": true,
-      "access": false,
-      "key": "LOGIN",
-      "inherit": false
-    }
-  },
-  {
-    "model": "system.systemconfig",
     "pk": "a42a78fd-8087-4499-ab06-f3d6dbeee262",
     "fields": {
       "created_time": "2024-04-19T07:43:23.923Z",
-      "updated_time": "2024-07-23T07:05:51.878Z",
+      "updated_time": "2024-09-05T07:21:29.816Z",
       "description": null,
       "creator": 1,
       "modifier": 1,
       "dept_belong": null,
-      "value": "{\n  \"Version\": \"3.3.1\",\n  \"Title\": \"xAdmin\",\n  \"FixedHeader\": true,\n  \"HiddenSideBar\": false,\n  \"MultiTagsCache\": false,\n  \"KeepAlive\": true,\n  \"Locale\": \"zh\",\n  \"Layout\": \"vertical\",\n  \"Theme\": \"light\",\n  \"DarkMode\": false,\n  \"OverallStyle\": \"light\",\n  \"Grey\": false,\n  \"Weak\": false,\n  \"HideTabs\": false,\n  \"HideFooter\": false,\n  \"Stretch\": false,\n  \"SidebarStatus\": true,\n  \"EpThemeColor\": \"#409EFF\",\n  \"ShowLogo\": true,\n  \"ShowModel\": \"smart\",\n  \"MenuArrowIconNoTransition\": false,\n  \"CachingAsyncRoutes\": false,\n  \"TooltipEffect\": \"light\",\n  \"ResponsiveStorageNameSpace\": \"responsive-\",\n  \"MenuSearchHistory\": 6\n}",
+      "value": {
+        "Version": "3.3.1",
+        "Title": "xAdmin",
+        "FixedHeader": true,
+        "HiddenSideBar": false,
+        "MultiTagsCache": false,
+        "KeepAlive": true,
+        "Locale": "zh",
+        "Layout": "vertical",
+        "Theme": "light",
+        "DarkMode": false,
+        "OverallStyle": "light",
+        "Grey": false,
+        "Weak": false,
+        "HideTabs": false,
+        "HideFooter": false,
+        "Stretch": false,
+        "SidebarStatus": true,
+        "EpThemeColor": "#409EFF",
+        "ShowLogo": true,
+        "ShowModel": "smart",
+        "MenuArrowIconNoTransition": false,
+        "CachingAsyncRoutes": false,
+        "TooltipEffect": "light",
+        "ResponsiveStorageNameSpace": "responsive-",
+        "MenuSearchHistory": 6
+      },
       "is_active": true,
       "access": true,
       "key": "WEB_SITE_CONFIG",
@@ -140,12 +149,12 @@
     "pk": "dd9dcb49-07b3-43e6-8893-cf093762b9cb",
     "fields": {
       "created_time": "2024-01-10T01:35:44.713Z",
-      "updated_time": "2024-01-10T02:29:15.944Z",
+      "updated_time": "2024-09-05T07:20:47.194Z",
       "description": "数据权限控制",
       "creator": 1,
       "modifier": 1,
       "dept_belong": null,
-      "value": "true",
+      "value": true,
       "is_active": true,
       "access": false,
       "key": "PERMISSION_DATA",
