feat: 增加cpu利用率监控指标

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -42,7 +42,7 @@ services:
     restart: always
     image: 'xadmin-server'
     build:
-      context: system
+      context: .
       dockerfile: Dockerfile
     working_dir: /data/xadmin-server
     networks:
