--- a/loadjson/systemconfig.json
+++ b/loadjson/systemconfig.json
@@ -73,36 +73,26 @@
     "fields": {
       "created_time": "2024-04-19T07:43:23.923Z",
       "updated_time": "2024-09-05T07:21:29.816Z",
-      "description": null,
+      "description": "站点默认配置",
       "creator": 1,
       "modifier": 1,
       "dept_belong": null,
       "value": {
-        "Version": "4.1.0",
-        "Title": "xAdmin",
-        "FixedHeader": true,
-        "HiddenSideBar": false,
-        "MultiTagsCache": false,
-        "KeepAlive": true,
         "Locale": "zh",
         "Layout": "vertical",
         "Theme": "light",
         "DarkMode": false,
+        "SidebarStatus": true,
+        "EpThemeColor": "#409EFF",
         "OverallStyle": "light",
         "Grey": false,
         "Weak": false,
         "HideTabs": false,
         "HideFooter": false,
-        "Stretch": false,
-        "SidebarStatus": true,
-        "EpThemeColor": "#409EFF",
         "ShowLogo": true,
         "ShowModel": "smart",
-        "MenuArrowIconNoTransition": false,
-        "CachingAsyncRoutes": false,
-        "TooltipEffect": "light",
-        "ResponsiveStorageNameSpace": "responsive-",
-        "MenuSearchHistory": 6
+        "MultiTagsCache": false,
+        "Stretch": false
       },
       "is_active": true,
       "access": true,
