feat: vscode容器化开发

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .idea/
-server/__pycache__/
+**/__pycache__/*
 *.mo
+__pycache__/*
+logs/*
+static/*
+common/utils/ip/geoip/GeoLite2-City.mmdb
+common/utils/ip/ipip/ipipfree.ipdb
