--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,9 @@ services:
   xadmin-server:
     container_name: xadmin-server
     restart: always
-    image: 'xadmin-server'
+    tty: true
+    command: start web
+    image: xadmin-server
     build:
       context: .
       dockerfile: Dockerfile
@@ -69,10 +71,8 @@ services:
     external_links:
       - xadmin-mariadb:mariadb
       - xadmin-redis:redis
-    #extra_hosts:
-    # - "mariadb:192.168.196.1"
-    sysctls:
-      - net.core.somaxconn=4096
+    ulimits:
+      core: 0
     ports:
       - "8896:8896"
     depends_on:
@@ -84,3 +84,31 @@ services:
       timeout: 5s
       retries: 3
       start_period: 90s
+
+  xadmin-celery:
+    container_name: xadmin-celery
+    hostname: xadmin-celery
+    ulimits:
+      core: 0
+    restart: always
+    tty: true
+    command: start task
+    image: xadmin-server
+    working_dir: /data/xadmin-server
+    environment:
+      - TZ=Asia/Shanghai
+    networks:
+      - net
+    volumes:
+      - ./:/data/xadmin-server
+    external_links:
+      - xadmin-mariadb:mariadb
+      - xadmin-redis:redis
+    depends_on:
+      - xadmin-server
+    healthcheck:
+      test: "bash utils/check_celery.sh"
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
