--- a/docker-compose-sqlite.yml
+++ b/docker-compose-sqlite.yml
@@ -8,8 +8,7 @@ networks:
 
 services:
   xadmin-redis:
-    image: xadmin-redis:7.4.1
-    #    image: bitnami/redis:7.4.1
+    image: bitnami/redis:7.4.1
     container_name: xadmin-redis
     restart: always
     networks:
@@ -24,13 +23,12 @@ services:
       retries: 3
       start_period: 10s
 
-
   xadmin-server:
     container_name: xadmin-server
     restart: always
     tty: true
     command: start web
-    image: xadmin-server:4.1.5
+    image: nineaiyu/xadmin-server:4.1.5
     build:
       context: .
       dockerfile: Dockerfile
@@ -42,6 +40,7 @@ services:
     volumes: #需要设置 1001 权限，否则mysql会启动失败
       - ./:/data/xadmin-server
     external_links:
+      - xadmin-mariadb:mariadb
       - xadmin-redis:redis
     ulimits:
       core: 0
@@ -49,6 +48,7 @@ services:
       - "8896:8896"
     depends_on:
       - xadmin-redis
+      - xadmin-mariadb
     healthcheck:
       test: "curl -fsL http://localhost:8896/api/common/api/health > /dev/null"
       interval: 10s
@@ -64,7 +64,7 @@ services:
     restart: always
     tty: true
     command: start task
-    image: xadmin-server:4.1.5
+    image: nineaiyu/xadmin-server:4.1.5
     working_dir: /data/xadmin-server
     environment:
       - TZ=Asia/Shanghai
@@ -75,7 +75,7 @@ services:
     external_links:
       - xadmin-redis:redis
     depends_on:
-      - xadmin-server
+      - xadmin-redis
     healthcheck:
       test: "bash utils/check_celery.sh"
       interval: 10s
