perf: add quick start

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -14,11 +14,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Get version
-        id: get_version
-        run: |
-          TAG=$(basename ${GITHUB_REF})
-          echo "{TAG}={$TAG}" >> $GITHUB_OUTPUT
+
       - name: Create Release
         id: create_release
         uses: release-drafter/release-drafter@v6
@@ -29,10 +25,20 @@ jobs:
           version: ${{ steps.get_version.outputs.TAG }}
           tag: ${{ steps.get_version.outputs.TAG }}
 
+      - name: Get version
+        id: get_version
+        run: |
+          TAG=$(basename ${GITHUB_REF})
+          VERSION=${TAG/v/}
+          wget https://raw.githubusercontent.com/nineaiyu/xadmin-installer/master/quick_start.sh
+          sed -i "s@VERSION=.*@VERSION=v${VERSION}@g" quick_start.sh
+
       - name: Release Upload Assets
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
           draft: true
+          files:
+            quick_start.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
