--- a/config_example.yml
+++ b/config_example.yml
@@ -27,20 +27,27 @@ SECRET_KEY:
 # DB_NAME:
 # MySQL or postgres setting like:
 # DB_ENGINE can set mysql, oracle, postgresql, sqlite3
+
 # 使用 Mariadb 作为数据库
-DB_ENGINE: mysql
-DB_HOST: mariadb
-DB_PORT: 3306
+#DB_ENGINE: mysql
+#DB_HOST: mysql
+#DB_PORT: 3306
+
+# 使用 postgresql 作为数据库[默认数据库]
+DB_ENGINE: postgresql
+DB_HOST: postgresql
+DB_PORT: 5432
+
 DB_USER: server
 DB_DATABASE: xadmin
-#DB_PASSWORD:
+#DB_PASSWORD: KGzKjZpWBp4R4RSa
 
 
 # Use Redis as broker for celery and web socket
 # Redis配置
 REDIS_HOST: redis
 REDIS_PORT: 6379
-#REDIS_PASSWORD:
+#REDIS_PASSWORD: nineven
 #DEFAULT_CACHE_ID: 1
 #CHANNEL_LAYERS_CACHE_ID: 2
 #CELERY_BROKER_CACHE_ID: 3
