--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,110 +7,79 @@ networks:
         - subnet: 192.168.196.0/24
 
 services:
-  xadmin-mariadb:
-    image: bitnami/mariadb:11.5.2
-    container_name: xadmin-mariadb
+  nginx:
+    image: registry.cn-beijing.aliyuncs.com/nineaiyu/nginx:1.24-bullseye
+    container_name: xadmin-nginx
     restart: always
-    environment:
-      - TZ=Asia/Shanghai
-      - MARIADB_DATABASE=xadmin
-      - MARIADB_USER=server
-      - MARIADB_PASSWORD=KGzKjZpWBp4R4RSa
-      - ALLOW_EMPTY_PASSWORD=yes
-      - MARIADB_SKIP_TEST_DB=yes
-      - MARIADB_ENABLE_SLOW_QUERY=1
-      - MARIADB_LONG_QUERY_TIME=3
-      - MARIADB_CHARACTER_SET=utf8mb4
-      - MARIADB_COLLATE=utf8mb4_bin # 字段值 大小写敏感
-      - MARIADB_EXTRA_FLAGS=--max-connect-errors=3000 --max_connections=30000
-    #ports:
-    #  - 3306:3306
+    volumes:
+      - ./utils/nginx.conf:/etc/nginx/nginx.conf:r
+      - ./data/logs:/var/log/nginx
+    ports:
+      - "8896:8896"
     networks:
       - net
-    volumes: # 需要设置 1001 权限，否则mysql会启动失败
-      - ../xadmin-mariadb/data:/bitnami/mariadb/data
-      - ../xadmin-mariadb/logs:/opt/bitnami/mariadb/logs
+
+  postgresql:
+    image: registry.cn-beijing.aliyuncs.com/nineaiyu/postgres:16.5
+    container_name: xadmin-postgresql
+    restart: always
+    environment:
+      TZ: ${TZ:-Asia/Shanghai}
+      POSTGRES_DB: ${DB_DATABASE:-xadmin}
+      POSTGRES_USER: ${DB_USER:-server}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-KGzKjZpWBp4R4RSa}
+    volumes:
+      - ${VOLUME_DIR:-../}/xadmin-postgresql/data:/var/lib/postgresql/data
     healthcheck:
-      test: "mariadb-admin -uroot ping"
+      test: "pg_isready -q -U $$POSTGRES_USER"
       interval: 10s
       timeout: 5s
       retries: 3
       start_period: 30s
-
-  xadmin-redis:
-    image: bitnami/redis:7.4.1
-    container_name: xadmin-redis
-    restart: always
     networks:
       - net
+
+  redis:
+    image: registry.cn-beijing.aliyuncs.com/nineaiyu/redis:7.4.1
+    container_name: xadmin-redis
+    hostname: xadmin-redis
+    restart: always
+    command: [ "redis-server", "--requirepass", "$REDIS_PASSWORD" ]
     environment:
-      - TZ=Asia/Shanghai
-      - REDIS_PASSWORD=nineven
+      TZ: ${TZ:-Asia/Shanghai}
+      REDIS_PORT: ${REDIS_PORT:-6379}
+      REDIS_PASSWORD: ${REDIS_PASSWORD:-nineven}
+    volumes:
+      - ${VOLUME_DIR:-../}/xadmin-redis/data:/data
     healthcheck:
-      test: "redis-cli -h 127.0.0.1 -a $$REDIS_PASSWORD info Replication"
+      test: "redis-cli -h 127.0.0.1 -p $$REDIS_PORT -a $$REDIS_PASSWORD info Replication"
       interval: 10s
       timeout: 5s
       retries: 3
       start_period: 10s
-
-  xadmin-server:
-    container_name: xadmin-server
-    restart: always
-    tty: true
-    command: start web
-    image: nineaiyu/xadmin-server:4.2.1
-    build:
-      context: .
-      dockerfile: Dockerfile
-    working_dir: /data/xadmin-server
-    environment:
-      - TZ=Asia/Shanghai
     networks:
       - net
-    volumes: #需要设置 1001 权限，否则mysql会启动失败
-      - ./:/data/xadmin-server
-    external_links:
-      - xadmin-mariadb:mariadb
-      - xadmin-redis:redis
+
+  server:
+    image: nineaiyu/xadmin-server
+    container_name: xadmin-server
+    hostname: xadmin-server
+    build:
+      context: .
+      dockerfile: Dockerfile-dev
     ulimits:
       core: 0
-    ports:
-      - "8896:8896"
-    depends_on:
-      - xadmin-redis
-      - xadmin-mariadb
+    restart: always
+    privileged: true
+    command: start all
+    volumes:
+      - ./:/data/xadmin-server
+    #      - ${VOLUME_DIR:-.}/server/data:/data/xadmin-server/data
     healthcheck:
       test: "curl -fsL http://localhost:8896/api/common/api/health > /dev/null"
       interval: 10s
       timeout: 5s
       retries: 3
       start_period: 90s
-
-  xadmin-celery:
-    container_name: xadmin-celery
-    hostname: xadmin-celery
-    ulimits:
-      core: 0
-    restart: always
-    tty: true
-    command: start task
-    image: nineaiyu/xadmin-server:4.2.1
-    working_dir: /data/xadmin-server
-    environment:
-      - TZ=Asia/Shanghai
     networks:
       - net
-    volumes:
-      - ./:/data/xadmin-server
-    external_links:
-      - xadmin-mariadb:mariadb
-      - xadmin-redis:redis
-    depends_on:
-      - xadmin-redis
-      - xadmin-mariadb
-    healthcheck:
-      test: "bash utils/check_celery.sh"
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 30s
