--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Update Version
+        run: |
+          TAG=$(basename ${GITHUB_REF})
+          VERSION=${TAG/v/}
+          sed -i "s@VERSION = .*@VERSION = '${VERSION}'@g" server/const.py
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
