--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -19,9 +19,9 @@ jobs:
         id: get_version
         run: |
           TAG=$(basename ${GITHUB_REF})
-          VERSION=${TAG/v/}
           echo "TAG=$TAG" >> $GITHUB_OUTPUT
           wget https://raw.githubusercontent.com/nineaiyu/xadmin-installer/master/quick_start.sh
+          VERSION=${TAG/v/}
           sed -i "s@VERSION=.*@VERSION=v${VERSION}@g" quick_start.sh
 
       - name: Create Release
@@ -40,7 +40,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           draft: true
-          files:
+          files: |
             quick_start.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
