--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -34,7 +34,10 @@ jobs:
           config-name: release-config.yml
           version: ${{ steps.get_version.outputs.TAG }}
           tag: ${{ steps.get_version.outputs.TAG }}
-
+          
+      - name: Sleep time
+        run: |
+          sleep 2
 
       - name: Release Upload Assets
         uses: softprops/action-gh-release@v2
