--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-django==5.1.4
+django==5.1.5
 djangorestframework==3.15.2
 django-cors-headers==4.6.0
 django-filter==24.3
-mysqlclient==2.2.6
+mysqlclient==2.2.7
 psycopg2-binary==2.9.10
 django-redis==5.4.0
 pycryptodomex==3.21.0
-djangorestframework-simplejwt==5.3.1
+djangorestframework-simplejwt==5.4.0
 celery==5.4.0
 django-celery-beat==2.7.0
 django-celery-results==2.5.1
@@ -14,15 +14,15 @@ flower==2.0.1
 python-daemon==3.1.2
 gunicorn==23.0.0
 django-proxy==1.3.0
-psutil==6.1.0
-uvicorn==0.32.1
+psutil==6.1.1
+uvicorn==0.34.0
 daphne==4.1.2
 channels==4.2.0
 channels-redis==4.2.1
 django-ranged-response==0.2.0
 user-agents==2.2.0
 aiofiles==24.1.0
-websockets==14.1
+websockets==14.2
 django-imagekit==5.0.0
 pilkit==3.0
 drf-spectacular==0.28.0
@@ -33,10 +33,11 @@ unicodecsv==0.14.1
 chardet==5.2.0
 pyexcel==0.7.1
 pyexcel-xlsx==0.6.0
-alibabacloud-dysmsapi20170525==3.1.0
-phonenumbers==8.13.51
+alibabacloud-dysmsapi20170525==3.1.1
+phonenumbers==8.13.53
 pycountry==24.6.1
 geoip2==4.8.1
 ipip-ipdb==1.6.1
 requests==2.32.3
 html2text==2024.2.26
+pyotp==2.9.0
