--- a/loadjson/systemconfig.json
+++ b/loadjson/systemconfig.json
@@ -1,23 +1,6 @@
 [
   {
     "model": "system.systemconfig",
-    "pk": "3bd7a92c-5d3c-4671-9843-15784577a27d",
-    "fields": {
-      "created_time": "2024-06-09T06:58:20.035Z",
-      "updated_time": "2024-09-05T07:20:25.157Z",
-      "description": "用户消息公告通知推送",
-      "creator": 1,
-      "modifier": 1,
-      "dept_belong": null,
-      "value": true,
-      "is_active": true,
-      "access": true,
-      "key": "PUSH_MESSAGE_NOTICE",
-      "inherit": true
-    }
-  },
-  {
-    "model": "system.systemconfig",
     "pk": "0c2be308-7fce-4bf1-ad72-1d55f3262345",
     "fields": {
       "created_time": "2024-01-08T09:40:40.434Z",
@@ -35,18 +18,18 @@
   },
   {
     "model": "system.systemconfig",
-    "pk": "83e04cef-dae4-460a-ae3d-2af17ff80c82",
+    "pk": "3bd7a92c-5d3c-4671-9843-15784577a27d",
     "fields": {
-      "created_time": "2024-06-09T06:59:09.233Z",
-      "updated_time": "2024-09-05T07:20:19.185Z",
-      "description": "用户聊天@消息推送",
+      "created_time": "2024-06-09T06:58:20.035Z",
+      "updated_time": "2024-09-05T07:20:25.157Z",
+      "description": "用户消息公告通知推送",
       "creator": 1,
       "modifier": 1,
       "dept_belong": null,
       "value": true,
       "is_active": true,
       "access": true,
-      "key": "PUSH_CHAT_MESSAGE",
+      "key": "PUSH_MESSAGE_NOTICE",
       "inherit": true
     }
   },
@@ -69,6 +52,23 @@
   },
   {
     "model": "system.systemconfig",
+    "pk": "83e04cef-dae4-460a-ae3d-2af17ff80c82",
+    "fields": {
+      "created_time": "2024-06-09T06:59:09.233Z",
+      "updated_time": "2024-09-05T07:20:19.185Z",
+      "description": "用户聊天@消息推送",
+      "creator": 1,
+      "modifier": 1,
+      "dept_belong": null,
+      "value": true,
+      "is_active": true,
+      "access": true,
+      "key": "PUSH_CHAT_MESSAGE",
+      "inherit": true
+    }
+  },
+  {
+    "model": "system.systemconfig",
     "pk": "a42a78fd-8087-4499-ab06-f3d6dbeee262",
     "fields": {
       "created_time": "2024-04-19T07:43:23.923Z",
@@ -78,21 +78,21 @@
       "modifier": 1,
       "dept_belong": null,
       "value": {
-        "Locale": "zh",
-        "Layout": "vertical",
-        "Theme": "light",
-        "DarkMode": false,
-        "SidebarStatus": true,
-        "EpThemeColor": "#409EFF",
-        "OverallStyle": "light",
         "Grey": false,
         "Weak": false,
+        "Theme": "light",
+        "Layout": "vertical",
+        "Locale": "zh",
+        "Stretch": false,
+        "DarkMode": false,
         "HideTabs": false,
-        "HideFooter": false,
         "ShowLogo": true,
         "ShowModel": "smart",
-        "MultiTagsCache": false,
-        "Stretch": false
+        "HideFooter": false,
+        "EpThemeColor": "#409EFF",
+        "OverallStyle": "light",
+        "SidebarStatus": true,
+        "MultiTagsCache": false
       },
       "is_active": true,
       "access": true,
