--- a/config_example.yml
+++ b/config_example.yml
@@ -58,6 +58,7 @@ REDIS_PORT: 6379
 HTTP_BIND_HOST: 0.0.0.0
 HTTP_LISTEN_PORT: 8896
 GUNICORN_MAX_WORKER: 4
+CELERY_WORKER_COUNT: 4
 
 # 需要将创建的应用写到里面
 XADMIN_APPS:
